# fitgrab

./: .fitgrab_queue.txt  .gitignore  20260406_16.51.35_job_log.txt  20260406_17.31.37_job_log.txt  README.md  ariadocs.txt  backup.sh  better.txt  bundle.js  claude  debugpy  debugpy-adapter  download.html  fitgrab  hellblade2.txt  install_linux.sh  install_windows.ps1  ipython  jlpm  jupyter  jupyter-dejavu  jupyter-events  jupyter-execute  jupyter-kernel  jupyter-kernelspec  jupyter-lab  jupyter-labextension  jupyter-labhub  jupyter-migrate  jupyter-nbconvert  jupyter-notebook  jupyter-run  jupyter-server  jupyter-troubleshoot  jupyter-trust  kimi  kimi-cli  listdetails.txt  metalgearrising.txt  out.txt  (+12 more)
.github/workflows/: health-check.yml  lint.yml  linux-test.yml  macos-test.yml  release.yml  security.yml  windows-test.yml
fitgrab_rust/: Cargo.toml
fitgrab_rust/playwright-helper/: index.js  package.json
fitgrab_rust/src/: config.rs  downloader.rs  lib.rs  main.rs  playwright.rs  signal.rs  utils.rs
