[package]
name = "fitgrab"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
rand = "0.8"
regex = "1"
dirs = "5"

[[bin]]
name = "fitgrab"
path = "src/main.rs"
